--- a/microservicecloud-config-dev-client.yml
+++ b/microservicecloud-config-dev-client.yml
@@ -16,7 +16,8 @@ spring:
      url: jdbc:mysql://localhost:3306/clouddb01              # 数据库名称
      username: root
      password: 123456
-        min-idle: 5                                           # 数据库连接池的最小维持连接数  dbcp2:
+     dbcp2:
+        min-idle: 5                                           # 数据库连接池的最小维持连接数  
         initial-size: 5                                       # 初始化连接数
         max-total: 5                                          # 最大连接数
         max-wait-millis: 200                                  # 等待连接获取的最大超时时间
@@ -54,7 +55,8 @@ spring:
      url: jdbc:mysql://localhost:3306/clouddb02              # 数据库名称
      username: root
      password: 123456
-        min-idle: 5                                           # 数据库连接池的最小维持连接数 dbcp2:
+     dbcp2:
+        min-idle: 5                                           # 数据库连接池的最小维持连接数 
         initial-size: 5                                       # 初始化连接数
         max-total: 5                                          # 最大连接数
         max-wait-millis: 200                                  # 等待连接获取的最大超时时间
