--- a/microservicecloud-config-eureka-client.yml
+++ b/microservicecloud-config-eureka-client.yml
@@ -15,9 +15,9 @@ eureka:
     instance:
        hostname:  eureka7001.com
     client: 
-       register-with-eureka: false     #false表示不向注册中心注册自己。
-       fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
-       service-url: 
+       registerWithEureka: false     #false表示不向注册中心注册自己。
+       fetchRegistry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
+       serviceUrl: 
              defaultZone:  http://eureka7001.com:7001/eureka/
 ---
 server:
@@ -32,7 +32,7 @@ eureka:
     instance:
        hostname:  eureka7001.com
     client: 
-       register-with-eureka: false     #false表示不向注册中心注册自己。
-       fetch-registry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
-       service-url: 
+       registerWithEureka: false     #false表示不向注册中心注册自己。
+       fetchRegistry: false     #false表示自己端就是注册中心，我的职责就是维护服务实例，并不需要去检索服务
+       serviceUrl: 
              defaultZone:  http://eureka7001.com:7001/eureka/
